Fixed spacing

--- a/lesson2/styles/mobile.css
+++ b/lesson2/styles/mobile.css
@@ -40,8 +40,9 @@ figure {
 }
 
 p {
-   width: 95%;
-   margin: .25em auto;
+   width: 90%;
+   margin: .0em .5em .5em .5em;;
+   padding: .5em;
    display: block;
    background-color: white;
 }
